--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1 class="header2">A bit about me</h1>
     <p>I was born and raised in the suburbs of Dallas, Texas. I have a sister that is 2.5 years younger than me. My favorite color is pink. My favorite movie is Ratatouille because of its theme, "Anyone can cook!" I'm not too sure what my favorite food is, but I think it might be mangos. I have one sister that's 2.5 years younger than me. We're like two peas in a pod. My family immigrated to the United States about 30 years ago due to the Vietnam War. I've always admired their perserverance and used this as inspiration in the things I pursued. Thus, I grew to find beauty in hardship--it's a major reason I'm interested in dentistry!
     </p>
-    <p>Growing up, my favorite subject was science because of how concrete and applicable it is. Because of this, I've gravitated towards healthcare since second grade. While the reasoning for this was pretty much baseless in elementary school, I grew to understand the intricacies of healthcare and began pondering different career options in high school. Initially, I was set on medicine, finding excitement in the fast-paced hospital environment. Wanting a better work-life balance, I pivoted to pharmacy, then to optometry. I began seriously pursuing optometry during my first year of university, becoming heavily involved in UTDallas's pre-optometry club and learning more about the field at statewide optometric conferences. I finally switched to dentistry when an unexpected opportunity fell into my lap. </p>
+    <p>Growing up, my favorite subject was science because of how concrete and applicable it is. Because of this, I've gravitated towards healthcare since elementary school. I grew to understand the intricacies of healthcare in high school, when I got to participate in a clinical rotations program. Initially, I was set on medicine, finding excitement in the fast-paced hospital environment. Wanting a better work-life balance, I pivoted to pharmacy, then to optometry. I began seriously pursuing optometry during my first year of university, becoming heavily involved in UTDallas's pre-optometry club and learning more about the field at statewide optometric conferences. I finally switched to dentistry when an unexpected job opportunity fell into my lap. </p>
     <section class="first-section">
         <figure class="row">
           <img class="second-grade" src="IMG_9175.jpeg">
@@ -41,6 +41,12 @@
             <img class="second-grade" src="./pictures/IMG_5157.jpeg">
             <figcaption class="caption">Me driving to work in pink.</figcaption>
         </figure>
+    </section>
+    <h1 class="header2">My Why</h1>
+    <section class="first-section">
+        <p> While there are many aspects of dentistry that I appreciate, one overarching theme connects most of my reasons for pursuing dentistry: the ability to connect and comfort patients in the most direct way. Working and volunteering as an RDA for the past 2.5 years has allowed me to immerse myself into the intricacies of dentistry. I deeply value the continuity of care that dentistry facilitates. I’ve had the privilege of following my own patients’ journeys at work—celebrating their newborn grandkids, college admissions, post-graduation paths and even inspiring some to consider dentistry!</p>
+        <p>I admire how a collection of radiographs tells a story…and how dentists get to add to story year after year. Dentists have the ability facilitate an environment of comfort and trust for every patient that enters the office simply due to the nature of the profession: it focuses on prevention and patient education, prioritizing patient choice.</p>
+        <p> To sum everything up, my experiences have reinforced my belief in the power of dentistry to affect change, no matter how small. From allowing patients to stray from their treatment plan to providing free dental work to hundreds of patients at mass volunteer events, the field of dentistry makes way for profound impacts and compassionate care that drives my dedication to dentistry.</p>
     </section>
     <h1 class="header2">Upcoming</h1>
     <section class="first-section">
