--- a/page1a.html
+++ b/page1a.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">About</a>
                 <li><a href="page1.html">Gallery</a>
+                <li><a href="page2.html">Blog</a>
             </ul>
         </nav>
     </header>
@@ -22,12 +23,13 @@
             <figcaption class="caption">Me and Dr. D after 12 long hours of working.</figcaption>
         </figure>
         <h1 class="header2">Bonham 2023</h1>
-        <p class="subtitle-text">I attended my first ever TMOM in April of 2023. Because Bonham was about two hours from Dallas, I had to wake up at 4 AM to be able to arrive at 6 AM. I was a bit intimidated at first since I had only recently made the decision to seriously pursue dentistry. However, the chaos of hundreds of volunteers and patients circulating 40 chairs quickly distracted me. The day passed by quickly for me, an indication that I had made the right choice in switching career paths. I witnessed an incredible amount of dedication and met many amazing people, one of them being Dr. D. She encouraged me to find a hobby or niche that would make me stand out as an applicant and introduced me to the technicalities of the field. </p>
+        <p class="subtitle-text">I attended my first ever TMOM in April of 2023. Because Bonham was about an hour or so from Dallas, I had to wake up at 4 AM to be able to arrive at 6 AM. I was a bit intimidated at first since I had only recently made the decision to seriously pursue dentistry. However, the chaos of hundreds of volunteers and patients circulating 40 chairs quickly distracted me. The day passed by quickly for me, an indication that I had made the right choice in switching career paths. I witnessed an incredible amount of dedication and met many amazing people, one of them being Dr. D. She encouraged me to find a hobby or niche that would make me stand out as an applicant and introduced me to the technicalities of the field. </p>
     </section>
     <section class="second-section">
         <h1 class="header2">Lumberton 2024</h1>
         <p class="subtitle-text">My second TMOM in Lumberton, a five-hour drive away, took place in February of 2024. This time, I dragged my sister along too! I assisted Dr. A, a graduate from UTHealth San Antonio's School of Dentistry. He taught me a lot about the extraction process, emphasizing the importance of maintaining access and vision while removing a tooth. Although I cared for a variety of patients throughout the day, I distinctly remember the one patient in particular. He fixed sewing machines for a living and required free dental work because he gave his savings to his children to raise their children. After a couple of extractions, he thanked us with a smile on his face despite having a mouth full of gauze. This event stays close to my heart because of the people I was fortunate enough to meet that day.</p>
-    </section class="first-section">
+    </section>
+    <section class="second-section">
     <figure class="row">
         <img class="TMOM1" src="./pictures/IMG_1582.jpeg">
         <figcaption class="caption">Me and Dr. A.</figcaption>
@@ -41,8 +43,18 @@
         <figcaption class="caption">A picture of the venue.</figcaption>
     </figure>
     </section>
+    <section class="second-section">
+        <h1 class="header2">Bonham 2025</h1>
+        <p class="subtitle-text">I was able to participate in the pre-screening for the Bonham event coming up in April during the Friday of spring break. This was the first time I took x-rays using a sensor, and it was so much fun (but also a bit embarrassing because I had so much trouble figuring out how to angle it at first. A couple weeks later...</p>
+    </section>
+    <section class="second-section">
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_1873.jpg">
+            <figcaption class="caption">Me in my assigned station.</figcaption>
+        </figure>
+    </section>
     <footer class="footer">
-        <p>Hannah Tran. Last updated: January 18th, 2025.</p>
+        <p>Hannah Tran. Last updated: March 22nd, 2025.</p>
     </footer>
 
 </body>
