--- a/page1b.html
+++ b/page1b.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">About</a>
                 <li><a href="page1.html">Gallery</a>
+                <li><a href="page2.html">Blog</a>
             </ul>
         </nav>
     </header>
@@ -47,7 +48,7 @@
     </section>
     <h1 class="header2">December 2024</h1>
     <section class="second-section">
-        <p class="subtitle-text">This mission took place in Fort Worth, a few days after Christmas. I woke up at 6 AM since we had to arrive at 7:30 AM. It was pouring rain the entire day, but many patients still showed up to be treated. This mission was meant to serve the religious figures returning to Vietnam, so it was much shorter than normal missions. As expected, I dragged my sister along. Surprisingly, she got pulled from sterilization to assist hygiene.</p>
+        <p class="subtitle-text">This mission took place in Fort Worth, a few days after Christmas. I woke up at 6 AM since we had to arrive at 7:30 AM. It was pouring rain the entire day, but many patients still showed up to be treated. This mission was meant to serve the religious figures returning to Vietnam, so it was much shorter than normal missions. As expected, I dragged my sister along. Surprisingly, she got pulled from sterilization to assist hygiene!</p>
     <section class="second-section">
         <figure class="row">
         <img class="TMOM1" src="./pictures/IMG_1256.jpg">
