--- a/page1d.html
+++ b/page1d.html
@@ -12,12 +12,13 @@
             <ul>
                 <li><a href="index.html">About</a>
                 <li><a href="page1.html">Gallery</a>
+                <li><a href="page2.html">Blog</a>
             </ul>
         </nav>
     </header>
     <h1 class="title-name">Pre-Dental Days</h1>
     <section class="second-section">
-        <h1 class="header2">Texas A&M</h1>
+        <h1 class="header2">Texas A&M 2024</h1>
         <p class="subtitle-text">TAMSOD was the first dental school I toured. Their Impressions Day was hosted by SNDA. They planned a variety of hands-on activities such as waxing, drilling, composite filings, and more. I listened to lectures by admissions officials and an open Q&A session with a dentist panel. The dentist who extracted my wisdom teeth was one of the speakers! I was also able to gain a better feel of TAMSOD’s campus. This event was the most memorable out of the three pre-dental events I attended in the spring. I felt the most connected to the people and it helped reaffirm TAMSOD as one of my top dental schools. </p>
     </section>
     <section class="second-section">
@@ -30,7 +31,7 @@
             <figcaption class="caption">Pouring stone.</figcaption>
         </figure>
     </section>
-    <h1 class="header2">UTHealth Houston</h1>
+    <h1 class="header2">UTHealth Houston 2024</h1>
     <section class="second-section">
         <p class="subtitle-text">UTSD's Impressions Day was also hosted by SNDA. One thing that stood out to me about the school was its beautiful campus. The spirit of the students and faculty were apparent in the school's decor. They even had a designated tooth room! A good amount of UTD students were also able to make it down to Houston, so it was nice seeing familiar faces.</p>
     </section>
@@ -44,9 +45,10 @@
             <figcaption class="caption">UTD Pre-Dental Association.</figcaption>
         </figure>
     </section>
-    <h1 class="header2">UTHealth San Antonio</h1>
+    <h1 class="header2">UTHealth San Antonio 2024</h1>
     <section class="second-section">
         <p class="subtitle-text">UTHSCSA's Pre-Dental Day was hosted by ASDA. I participated in activities similar to those at previous Impressions days. I gained a better feel of the school and appreciated their strive for excellence in terms of training competent dentists. This time, my family came with me, and we were able to visit the nearby Japanese Garden the morning after the event.</p>
+    </section>
     <section class="second-section">
         <figure class="row">
         <img class="TMOM1" src="./pictures/IMG_7941.jpeg">
@@ -57,8 +59,27 @@
         <figcaption class="caption">Japanese Tea Garden.</figcaption>
     </figure>
     </section>
+    <h1 class="header2">Texas A&M 2025</h1>
+    <section class="second-section">
+        <p class="subtitle-text">I returned to TAMCOD for a second Impressions Day hosted by SNDA to hone in on my interviewing skills. Interestingly, I found this visit to be much more fun, likely because I met many more people this time. Re-visiting TAMCOD before the applation cycle opens was very impactful because it allowed me to find answers for a lot of my questions. During the dentist panel, one of the dentists emphasized the importance of paying it forward, and I realized this was one of my most motivating factors to pursue dentistry--I just couldn't find a good word for it until today. The flexibility and responsibility of compassion within the dental profession allows you to give back in so many different ways! I left the event with increased clarity on my own core values and a renewed sense of appreciation for the dental community. </p>
+    </section>
+    <section class="second-section">
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_1631.jpg">
+            <figcaption class="caption">Manifesting this!</figcaption>
+        </figure>
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_1633.jpg">
+            <figcaption class="caption">Members of UTD PDA in attendance.</figcaption>
+        </figure>
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_1632.jpg">
+            <figcaption class="caption">Group C taking a selfie after school tour.</figcaption>
+        </figure>
+    </section>
+
     <footer class="footer">
-        <p>Hannah Tran. Last updated: January 18th, 2025.</p>
+        <p>Hannah Tran. Last updated: March 2nd, 2025.</p>
     </footer>
 </body>
 </html>
