--- a/page1f.html
+++ b/page1f.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">About</a>
                 <li><a href="page1.html">Gallery</a>
+                <li><a href="page2.html">Blog</a>
             </ul>
         </nav>
     </header>
@@ -66,8 +67,22 @@
         <figcaption class="caption">Me with tooth mascot.</figcaption>
     </figure>
     </section>
+        <h1 class="header2">Last Writers</h1>
+    <section class="second-section">
+        <p class="subtitle-text">Last Writers is a unique program that gives students the chance to interview hospice patients and create a living memoir! I completed mine in spring of sophomore year and continued with the organization as a mentor and fundraising chair. My experience with LW opened my eyes to the resilience of the human body and mind. I'l forever be grateful for the chance to have gotten a glimpse into the 98 and counting years of another person's life. The writing process was very fulfilling as it allowed me to oversee my project from start to finish, personalizing the book for my patient and her family. This reminded me one of the reasons why I chose dentistry: the ability to orient patient care in a way that prioritizes their experience.</p>
+    <section class="second-section">
+        <figure class="row">
+        <img class="TMOM1" src="./pictures/IMG_1874.jpg">
+        <figcaption class="caption">The first fundraising event I hosted.</figcaption>
+    </figure>
+    <figure class="row">
+        <img class="TMOM1" src="./pictures/IMG_1875.jpg">
+        <figcaption class="caption">Me with my published memoir!</figcaption>
+    </figure>
+    </section>
+
     <footer class="footer">
-        <p>Hannah Tran. Last updated: January 18th, 2025.</p>
+        <p>Hannah Tran. Last updated: March 22nd, 2025.</p>
     </footer>
 </body>
 </html>
