--- a/page1e.html
+++ b/page1e.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">About</a>
                 <li><a href="page1.html">Gallery</a>
+                <li><a href="page2.html">Blog</a>
             </ul>
         </nav>
     </header>
