--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
         <ul>
             <li><a href="index.html">About</a>
             <li><a href="page1.html">Gallery</a>
-            <li><a href="page2.html">Blog</a>
         </ul>
     </nav>
     <h1 class="title-name">Hi, my name is Hannah.</h1>
     <img class="portrait" src="DSC_0295.jpg"></img>
     <section class="first-section">
         <p>I'm currently a third-year student at the <b>University of Texas at Dallas</b>. I'm majoring in Biology with a minor in Secondary Science Education.</p>
-        <p>Currently, I'm studying for my second DAT attempt in March and preparing to enter the spring semester of junior year. When I'm not studying or working, I like to volunteer, scrapbook, sing karaoke or try new foods!</p>
-        <p>I'm a huge fan of creating things (a major part of why I'm interested in dentistry!), so I made this website to chronicle my undergraduate years. Join me on my <b>pre-dental journey</b>!</p>
+        <p>Currently, I'm finishing up my spring semester and preparing for the upcoming application cycle. When I'm not studying or working, I like to volunteer, scrapbook, sing karaoke or try new foods!</p>
+        <p>I'm a huge fan of creating things (a major part of why I'm interested in dentistry!), so I made this website to chronicle my undergraduate years (and hopefully my dental school years as well). Join me on my <b>pre-dental journey</b>!</p>
     </section>
     <h1 class="header2">A bit about me</h1>
     <p>I was born and raised in the suburbs of Dallas, Texas, and I have a sister who is 2.5 years younger than me. We're like two peas in a pod. My favorite color is pink, and my favorite movie is Ratatouille because of its inspiring theme: "Anyone can cook!" While I'm not entirely sure what my favorite food is, I think it might be mangos. My family immigrated to the United States about 30 years ago due to the Vietnam War. I've always admired their perseverance and have drawn inspiration from it in everything I do. This has helped me appreciate the beauty in hardship, which is one of the main reasons I'm interested in dentistry.
@@ -49,19 +48,8 @@
         <p>I admire how a collection of radiographs tells a story…and how dentists get to add to that story year after year. Dentists have the ability facilitate an environment of comfort and trust for every patient that enters the office simply due to the nature of the profession: it focuses on prevention and patient education, prioritizing patient choice.</p>
         <p> To sum everything up, my experiences have reinforced my belief in the power of dentistry to affect change, no matter how small. From allowing patients to stray from their treatment plan to providing free dental work to hundreds of patients at mass volunteer events, dentistry makes way for profound impacts and compassionate care, which drives my dedication to the field.</p>
     </section>
-    <h1 class="header2">Upcoming</h1>
-    <section class="first-section">
-    <p>
-        <span><b>April 11-12th, 2025</b></span>
-        <span>TMOM Bonham</span>
-    </p>
-    <p>
-        <span><b>May 9-12th, 2025</b></span>
-        <span>TDA Conference</span>
-    </p>
-    </section>
     <footer class="footer">
-        <p>Hannah Tran. Last updated: March 22nd, 2025.</p>
+        <p>Hannah Tran. Last updated: March 25th, 2025.</p>
     </footer>
 </body>
 </html>
