--- a/page1a.html
+++ b/page1a.html
@@ -12,7 +12,6 @@
             <ul>
                 <li><a href="index.html">About</a>
                 <li><a href="page1.html">Gallery</a>
-                <li><a href="page2.html">Blog</a>
             </ul>
         </nav>
     </header>
@@ -45,7 +44,7 @@
     </section>
     <section class="second-section">
         <h1 class="header2">Bonham 2025</h1>
-        <p class="subtitle-text">I was able to participate in the pre-screening for the Bonham event coming up in April during the Friday of spring break. This was the first time I took x-rays using a sensor, and it was so much fun (but also a bit embarrassing because I had so much trouble figuring out how to angle it at first. A couple weeks later...</p>
+        <p class="subtitle-text">I was able to participate in the pre-screening for the Bonham event coming up in April during the Friday of spring break. This was the first time I took x-rays using a sensor, and it was so much fun (but also a bit embarrassing because I had so much trouble figuring out how to angle it at first). Stay tuned for treatment day on April 12th!</p>
     </section>
     <section class="second-section">
         <figure class="row">
@@ -54,7 +53,7 @@
         </figure>
     </section>
     <footer class="footer">
-        <p>Hannah Tran. Last updated: March 22nd, 2025.</p>
+        <p>Hannah Tran. Last updated: March 25th, 2025.</p>
     </footer>
 
 </body>
