--- a/page1e.html
+++ b/page1e.html
@@ -12,13 +12,12 @@
             <ul>
                 <li><a href="index.html">About</a>
                 <li><a href="page1.html">Gallery</a>
-                <li><a href="page2.html">Blog</a>
             </ul>
         </nav>
     </header>
     <h1 class="title-name">Work</h1>
     <section class="second-section">
-        <p class="subtitle-text">Over the past 2.5 years, I've been working at a private practice on the weekends. With our patient demographic being primarily Vietnamese, Hispanic, and South Asian, I’ve had the privilege of meeting many patients with stories like those of my parents/grandparents, as well as kids who remind me of myself. I've very grateful to have the opportunity to improve my native tongue and even learn dental Spanish! Caring for primarily low-income patients has exposed me to extreme cases that sparked my passion for problem-solving. It has given me a realistic outlook that reinforces my foundational reasons for pursuing dentistry: the opportunity to directly influence patient care and patient lives over an extended period of time.</p>
+        <p class="subtitle-text">Over the past 2.5 years, I've been working at a private practice on the weekends. With our patient demographic being primarily Vietnamese, Hispanic, and South Asian, I’ve had the privilege of meeting many patients with stories like those of my parents/grandparents, as well as kids who remind me of myself. I've very grateful to have the opportunity to improve my native tongue and even learn dental Spanish! I've learned that the importance of representation in healthcare is highlighted in dentistry, where anxiety stemming from loud drills and uncomfortable procedures can be eased by a provider that can genuinely resonate with you. Caring for primarily low-income patients has exposed me to extreme cases that sparked my passion for problem-solving. It has given me a realistic outlook that reinforces my foundational reasons for pursuing dentistry: the opportunity to directly influence patient care and patient lives over an extended period of time.</p>
     </section>
     <section class="second-section">
         <figure class="row">
@@ -29,11 +28,13 @@
             <img class="TMOM1" src="./pictures/IMG_1255.jpg">
             <figcaption class="caption">Coronal polishing for my sister with my cousin assisting.</figcaption>
         </figure>
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_1883.jpg">
+            <figcaption class="caption">Me and my friend Avery.</figcaption>
+        </figure>
+
     </section>
     <h1 class="header2">Cool teeth!</h1>
-    <section class="second-section">
-        <p class="subtitle-text">Just some pictures of extracted teeth I've seen over the years.</p>
-    </section>
     <section class="first-section">
         <figure class="row">
             <img class="TMOM1" src="./pictures/IMG_8552.jpeg">
@@ -43,9 +44,13 @@
             <img class="TMOM1" src="./pictures/IMG_8550.jpeg">
             <figcaption class="caption">The same molar but with a better view of the cavity.</figcaption>
         </figure>
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_1884.jpg">
+            <figcaption class="caption">Before filling.</figcaption>
+        </figure>
     </section>
     <footer class="footer">
-        <p>Hannah Tran. Last updated: January 18th, 2025.</p>
+        <p>Hannah Tran. Last updated: March 25th, 2025.</p>
     </footer>
 </body>
 </html>
