--- a/page1a.html
+++ b/page1a.html
@@ -44,16 +44,24 @@
     </section>
     <section class="second-section">
         <h1 class="header2">Bonham 2025</h1>
-        <p class="subtitle-text">I was able to participate in the pre-screening for the Bonham event coming up in April during the Friday of spring break. This was the first time I took x-rays using a sensor, and it was so much fun (but also a bit embarrassing because I had so much trouble figuring out how to angle it at first). Stay tuned for treatment day on April 12th!</p>
+        <p class="subtitle-text">I was able to participate in the pre-screening for the Bonham event coming up in April during the Friday of spring break. This was the first time I took x-rays using a sensor, and it was so much fun (but also a bit embarrassing because I had so much trouble figuring out how to angle it at first). On treatment day, I assisted Dr. P on super cool molar extractions and cosmetic fillings. My sister also woke up at 4 AM to accompany me! She enjoyed her time as a runner, leading patients to chairs and bridging communication between those on the treatment floor and those at other stations. As always, the amount of people waiting hours on end for treatment stood out to me. One pediatric patient exclaimed he was very excited to eat a Minecraft McDonald's Happy Meal after waiting six hours for his cleaning (the Minecraft movie had recently came out). Another patient had plans to stop by Cici's Pizza for dinner. Moments like these are always my favorite part of the day!</p>
     </section>
     <section class="second-section">
         <figure class="row">
             <img class="TMOM1" src="./pictures/IMG_1873.jpg">
             <figcaption class="caption">Me in my assigned station.</figcaption>
         </figure>
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_8630.jpeg">
+            <figcaption class="caption">Me with Dr. P.</figcaption>
+        </figure>
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_2119.jpeg">
+            <figcaption class="caption">Me and my sister.</figcaption>
+        </figure>
     </section>
     <footer class="footer">
-        <p>Hannah Tran. Last updated: March 25th, 2025.</p>
+        <p>Hannah Tran. Last updated: June 3rd, 2025.</p>
     </footer>
 
 </body>
