--- a/page1.html
+++ b/page1.html
@@ -55,8 +55,16 @@
             </figure>
         </a>
     </section>
+    <section class="second-section">
+        <a href="page1g.html">
+            <figure class="row">
+                <img class="gallery-picture img-hover" src="./pictures/custom_lesly copy.jpg">
+                <figcaption class="grid-text">Hobbies!</figcaption>
+            </figure>
+        </a>
+
     <footer class="footer">
-        <p>Hannah Tran. Last updated: January 18th, 2025.</p>
+        <p>Hannah Tran. Last updated: January 11th, 2026.</p>
     </footer>
 
 </body>
