--- a/page1b.html
+++ b/page1b.html
@@ -58,8 +58,12 @@
         <figcaption class="caption">Mid-shift selfie.</figcaption>
     </figure>
     </section>
+        <h1 class="header2">December 2025</h1>
+    <section class="second-section">
+        <p class="subtitle-text">It was very rewarding getting to return to the same church to serve the same religious group as last December, exacty a year ago. After having been away from one of my favorite nonprofits for so long, it was very refreshing to see familiar faces and meet new people! I didn't get any pictures this mission because I was really busy juggling triage and assisting with restorative cases!</p>
+
     <footer class="footer">
-        <p>Hannah Tran. Last updated: January 18th, 2025.</p>
+        <p>Hannah Tran. Last updated: January 11th, 2026.</p>
     </footer>
 </body>
 </html>
