update hobbies page

--- a/page1a.html
+++ b/page1a.html
@@ -63,7 +63,7 @@
         <h1 class="header2">Abilene 2025</h1>
         <section class="second-section">
             <figure class="float-right">
-            <img class="TMOM1 row" src="./pictures/IMG_6722.jpg">
+            <img class="TMOM1" src="./pictures/IMG_6722.jpg">
             <figcaption class="caption">Me and my sister with a bird's eye view of the venue.</figcaption>
         </figure>
         <p class="subtitle-text">4th TMOM in the books! This event was definitely the most memorable because my family and I had so much trouble getting to Abilene. Our tires were losing air every fifteen minutes or so, and we had to stop to fill them up with air frequently. On top of that, the hotel room we booked did not come with two beds like we thought, so my sister and I ended up having to sleep on the floor. During the shift, I was assigned to triage and was helping scribe and direct patients. My sister helped out in patient registration.
