--- a/page1e.html
+++ b/page1e.html
@@ -17,16 +17,12 @@
     </header>
     <h1 class="title-name">Work</h1>
     <section class="second-section">
-        <p class="subtitle-text">Over the past 2.5 years, I've been working at a private practice on the weekends. With our patient demographic being primarily Vietnamese, Hispanic, and South Asian, I’ve had the privilege of meeting many patients with stories like those of my parents/grandparents, as well as kids who remind me of myself. I've very grateful to have the opportunity to improve my native tongue and even learn dental Spanish! I've learned that the importance of representation in healthcare is highlighted in dentistry, where anxiety stemming from loud drills and uncomfortable procedures can be eased by a provider that can genuinely resonate with you. Caring for primarily low-income patients has exposed me to extreme cases that sparked my passion for problem-solving. It has given me a realistic outlook that reinforces my foundational reasons for pursuing dentistry: the opportunity to directly influence patient care and patient lives over an extended period of time.</p>
+        <p class="subtitle-text">Over the past 2.5 years, I've been working at a small general practice on the weekends. With our patient demographic being primarily Vietnamese, Hispanic, and South Asian, I’ve had the privilege of meeting many patients with stories like those of my parents/grandparents, as well as kids who remind me of myself. I've very grateful to have the opportunity to improve my native tongue and even learn dental Spanish! I've learned that the importance of representation in healthcare is highlighted in dentistry, where anxiety stemming from loud drills and uncomfortable procedures can be eased by a provider that can genuinely resonate with you. Caring for primarily low-income patients has exposed me to extreme cases that sparked my passion for problem-solving. It has given me a realistic outlook that reinforces my foundational reasons for pursuing dentistry: the opportunity to directly influence patient care and patient lives over an extended period of time.</p>
     </section>
     <section class="second-section">
         <figure class="row">
             <img class="TMOM1" src="./pictures/IMG_7244.jpeg">
             <figcaption class="caption">Me with my sister.</figcaption>
-        </figure>
-        <figure class="row">
-            <img class="TMOM1" src="./pictures/IMG_1255.jpg">
-            <figcaption class="caption">Coronal polishing for my sister with my cousin assisting.</figcaption>
         </figure>
         <figure class="row">
             <img class="TMOM1" src="./pictures/IMG_1883.jpg">
@@ -43,6 +39,10 @@
         <figure class="row">
             <img class="TMOM1" src="./pictures/IMG_8550.jpeg">
             <figcaption class="caption">The same molar but with a better view of the cavity.</figcaption>
+        </figure>
+        <figure class="row">
+            <img class="TMOM1" src="./pictures/IMG_2247.jpeg">
+            <figcaption class="caption">Tooth with a cool booger-like infection at its apex.</figcaption>
         </figure>
     </section>
     <footer class="footer">
